<resources>
    <string name="app_name">Easy Recipes</string>
    <string name="txtTitle">Easy Crepes</string>
    <string name="description">Recipe Image</string>
    <string name="btnRecipe">View Recipe</string>
    <string name="txtIngredients">Ingredients</string>
    <string name="txtItem1">1 1/4 cups milk</string>
    <string name="txtItem2">2 large eggs</string>
    <string name="txtItem3">2 tblsp butter (melted)</string>
    <string name="txtItem4">1 1/2 tblsp sugar</string>
    <string name="txtItem5">1/8 teaspoon salt</string>
    <string name="txtItem6">1 cup flour</string>
    <string name="txtTitle2">Crepe Recipe</string>
    <string name="txtDirections">Directions</string>
    <string name="txtStep1">Add ingredients to a blender. Blend for 2-3 seconds.  Refrigerate for 30-60  minutes.</string>
    <string name="txtStep2">Heat a 10in. nonstick skillet medium heat.  Melt 1/4 tblsp butter in the skillet. Pour 1/4  cup of batter into the pan and swirl to coat evenly.  Cook for 1 minute; or until lightly browned. Flip and cook the other side for 30 seconds; or until lightly browned.</string>
</resources>